# al

./: .gitignore  DEPLOY_INSTRUCTIONS.md  README.md  index.html  render.yaml  requirements.txt  server.py  telegram_app.html
albot/: pyproject.toml
albot/mini_app/: requirements.txt  run_server.py
albot/sql/: schema.sql
albot/src/: __main__.py  ab_testing.py  analytics.py  billing.py  bot.py  branding.py  commands.py  commercial.py  config.py  error_handler.py  google_sheets.py  health_checker.py  hot_leads.py  integration_manager.py  integrations.py  llm.py  models.py  monitoring.py  notifications.py  parsing.py  scoring.py  script_templates.py  simple_billing.py  user_roles.py  utils.py  ux_texts.py
albot/tests/: __init__.py  conftest.py  run_tests.py  test_file_parsing.py  test_llm_integration.py  test_load_performance.py  test_trial_gating.py  test_ux_flow.py
